[gd_scene load_steps=25 format=3 uid="uid://cq41q1nk6jxrb"]

[ext_resource type="Script" path="res://Script/ling_bo_wei_bu.gd" id="1_3of63"]
[ext_resource type="PackedScene" uid="uid://cku255ljrdcj3" path="res://Scences/timer.tscn" id="2_7856h"]
[ext_resource type="Texture2D" uid="uid://bu15k6aubimv7" path="res://Sprite/LingBoWeiBu/Lilypad.png" id="2_yxsxq"]
[ext_resource type="Texture2D" uid="uid://jrg2576ox8t1" path="res://Sprite/LingBoWeiBu/frog_spritesheet.png" id="3_1ut6p"]
[ext_resource type="Texture2D" uid="uid://b7ta8yvktfe82" path="res://Sprite/LingBoWeiBu/inventory_chopped.png" id="4_cagan"]
[ext_resource type="FontFile" uid="uid://c5ugy4bgmo7mu" path="res://Font/ThaleahFat.ttf" id="4_xjpmg"]
[ext_resource type="Texture2D" uid="uid://pcidqasf8thu" path="res://Sprite/LingBoWeiBu/Square Buttons 26x19.png" id="6_1bbvw"]
[ext_resource type="PackedScene" uid="uid://bgs4ryqa52mgk" path="res://Scences/backbutton.tscn" id="8_mpkg3"]
[ext_resource type="PackedScene" uid="uid://bpji8grjpjpiw" path="res://Scences/end_image.tscn" id="8_vm86i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cymvp"]
atlas = ExtResource("3_1ut6p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1hmt"]
atlas = ExtResource("3_1ut6p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjwnl"]
atlas = ExtResource("3_1ut6p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agfnv"]
atlas = ExtResource("3_1ut6p")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t32a"]
atlas = ExtResource("3_1ut6p")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2x8r"]
atlas = ExtResource("3_1ut6p")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6awl"]
atlas = ExtResource("3_1ut6p")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qqlo"]
atlas = ExtResource("3_1ut6p")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kp7i"]
atlas = ExtResource("3_1ut6p")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r8r7"]
atlas = ExtResource("3_1ut6p")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27yqm"]
atlas = ExtResource("3_1ut6p")
region = Rect2(384, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nlj4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cymvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1hmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjwnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agfnv")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t32a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2x8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6awl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qqlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kp7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r8r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27yqm")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjcfe"]
atlas = ExtResource("4_cagan")
region = Rect2(6, 120, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcvbl"]
atlas = ExtResource("6_1bbvw")
region = Rect2(8, 36, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x23h"]
atlas = ExtResource("6_1bbvw")
region = Rect2(56, 68, 32, 24)

[node name="Ling_Bo_Wei_bu" type="Node2D"]
position = Vector2(2, 18)
script = ExtResource("1_3of63")

[node name="Background" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.745098, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Frog" type="AnimatedSprite2D" parent="UI"]
texture_filter = 1
position = Vector2(68, 266)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_nlj4d")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.261528

[node name="Lilypads" type="GridContainer" parent="UI"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -118.0
offset_right = 94.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(94, 106)
columns = 6

[node name="1" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="2" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="3" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="4" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="5" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="6" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="7" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="8" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="9" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="10" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="11" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="12" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="13" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="14" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="15" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="16" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="17" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="18" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="19" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="20" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="21" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="22" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="23" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="24" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="25" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="26" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="27" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="28" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="29" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="30" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="31" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="32" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="33" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="34" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="35" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="36" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="37" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="38" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="39" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="40" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="41" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="42" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="43" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="44" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="45" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="46" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="47" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="48" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="49" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="50" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="51" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="52" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="53" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="54" type="TextureRect" parent="UI/Lilypads"]
layout_mode = 2
texture = ExtResource("2_yxsxq")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" parent="UI/Control" instance=ExtResource("2_7856h")]
layout_mode = 0
offset_left = 36.0
offset_top = 42.0
offset_right = 132.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="UI/Control"]
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_top = 40.0
offset_right = -75.0
offset_bottom = 72.0
grow_horizontal = 0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("4_xjpmg")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/Control/Label"]
z_index = -1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_bjcfe")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
pivot_offset = Vector2(120, 0)

[node name="TextureButton" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_fcvbl")
texture_pressed = SubResource("AtlasTexture_3x23h")
stretch_mode = 1

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/TextureButton"]
layout_mode = 1
offset_left = 10.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_xjpmg")
theme_override_font_sizes/font_size = 16
text = "2Step"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_fcvbl")
texture_pressed = SubResource("AtlasTexture_3x23h")
stretch_mode = 1

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/TextureButton2"]
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_xjpmg")
theme_override_font_sizes/font_size = 16
text = "3Step"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_fcvbl")
texture_pressed = SubResource("AtlasTexture_3x23h")
stretch_mode = 1

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/TextureButton3"]
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_xjpmg")
theme_override_font_sizes/font_size = 16
text = "4Step"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_fcvbl")
texture_pressed = SubResource("AtlasTexture_3x23h")
stretch_mode = 1

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/TextureButton4"]
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_xjpmg")
theme_override_font_sizes/font_size = 16
text = "5Step"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Backbutton" parent="UI" instance=ExtResource("8_mpkg3")]
offset_left = 18.0
offset_top = 18.0
offset_right = 34.0
offset_bottom = 30.0

[node name="EndImage" parent="." instance=ExtResource("8_vm86i")]

[node name="Lose" parent="EndImage" index="0"]
offset_left = -237.0
offset_top = -102.0
offset_right = 237.0
offset_bottom = 102.0

[node name="Win" parent="EndImage" index="1"]
offset_left = -237.0
offset_top = -102.0
offset_right = 237.0
offset_bottom = 102.0

[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="EndImage/Lose/TextureButton" to="." method="restart"]
[connection signal="pressed" from="EndImage/Win/TextureButton" to="." method="restart"]

[editable path="EndImage"]
